--- a/Biology.html
+++ b/Biology.html
@@ -55,6 +55,7 @@
         </div>
       </div>
     </main>
+    <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="biology.js"></script>
     <script src="script.js"></script>
   </body>
